# datetime-mcp-server

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/datetime_mcp_server/: __init__.py  server.py
