[project]
name = "datetime-mcp-server"
version = "0.1.0"
description = "A simple MCP server that provides current date and time information"
authors = [
    {name = "Sensei Bas", email = "bas@ichigendo.nl"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
datetime-mcp-server = "datetime_mcp_server.server:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
datetime_mcp_server = ["py.typed"]
